Fix memory link in ssh manager QRegularExpressionValidator()

Patch by Martin T. H. Sandsmark <martin.sandsmark@kde.org>

BUG: 439555